<resources>
    <string name="app_name">购物车</string>

    <string name="welcome_to_shopping_system">欢迎来到购物系统</string>
    <string name="sign_in">登录</string>
    <string name="Register">注册</string>

    <string name="welcome_back">欢迎回来</string>
    <string name="sign_in_to_your_accent">请登录你的账号</string>
    <string name="mobile">账号</string>
    <string name="password">密码</string>
    <string name="remember_password">记住密码</string>
    <string name="automaticLogin">自动登录</string>
    <string name="register">没有账号？去注册</string>
    <string name="forget_your_password">忘记密码？</string>

    <string name="textBegin">让我们开始购物之旅吧！</string>
    <string name="register_to_your_accent">请注册你的账号</string>
    <string name="ture_password">确认密码</string>
    <string name="agree">同意用户协议</string>

    <string name="shared_preferences_file_name">Accent_and_password</string>
    <string name="login_account_name">login_account_name</string>
    <string name="login_password">login_password</string>
    <string name="login_confirmpassword">login_confirmpassword</string>
    <string name="login_remember_password">login_remember_password</string>

    <string name="home">首页</string>
    <string name="seach_goods">请输入想要搜索的商品名称</string>

    <string name="addGoods">添加商品</string>

    <string name="my">我的</string>
    <string name="username">用户昵称：</string>
    <string name="userid">账号id：</string>
    <string name="my_message">我的消息</string>
    <string name="my_order">我的订单</string>
    <string name="my_address">收货地址</string>
    <string name="my_collection">我的收藏</string>
    <string name="back">返回</string>
    <string name="exit">退出登录</string>

    <string name="todo">TODO</string>
    <string name="number">数量</string>
    <string name="product_name">商品名称</string>
    <string name="product_describe">商品描述</string>
    <string name="product_price">商品价格</string>
    <string name="product_picture">商品图片:</string>
    <string name="load_up">来发布你的商品吧</string>
    <string name="up">发布</string>


</resources>