<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/app_name"
        android:scaleType="centerCrop"
        android:src="@drawable/shop"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background_forget"/>

    <TextView
        android:id="@+id/textForgetPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:gravity="center"
        android:text="@string/forget_your_password"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <Button
        android:id="@+id/buttonRegister1"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:text="@string/register"
        android:textAllCaps="false"
        style="@style/MyButton"
        app:layout_constraintBottom_toTopOf="@+id/textForgetPassword"
        />

    <Button
        android:id="@+id/buttonSignIn"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:text="@string/sign_in"
        android:textAllCaps="false"
        style="@style/MyButton"
        app:layout_constraintBottom_toTopOf="@+id/buttonRegister1"
        />
    <RelativeLayout
        android:id="@+id/checkbox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginTop="40dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/buttonSignIn">
        <CheckBox
            android:id="@+id/Remember"
            android:text="@string/remember_password"
            android:textColor="@color/white"
            android:textColorHint="@color/colorTextHint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <CheckBox
            android:id="@+id/Login"
            android:text="@string/automaticLogin"
            android:textColor="@color/white"
            android:textColorHint="@color/colorTextHint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="100dp"/>

    </RelativeLayout>

    <EditText
        android:id="@+id/inputPassword1"
        android:drawableEnd="@drawable/baseline_visibility_off_24"
        android:layout_width="match_parent"
        android:hint="@string/password"
        android:imeOptions="actionDone"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:textColorHint="@color/colorTextHint"
        style="@style/MyEdit"
        app:layout_constraintBottom_toTopOf="@+id/checkbox"/>

    <EditText
        android:id="@+id/inputMobile1"
        android:layout_width="match_parent"
        android:hint="@string/mobile"
        android:imeOptions="actionDone"
        android:importantForAutofill="no"
        android:inputType="text"
        android:textColorHint="@color/colorTextHint"
        style="@style/MyEdit"
        app:layout_constraintBottom_toTopOf="@+id/inputPassword1"
        />

    <TextView
        android:id="@+id/textSignIn"
        android:layout_width="match_parent"
        android:layout_marginBottom="20dp"
        android:text="@string/sign_in_to_your_accent"
        android:textColor="@color/white"
        android:textSize="18sp"
        style="@style/MyText"
        app:layout_constraintBottom_toTopOf="@+id/inputMobile1"/>

    <TextView
        android:id="@+id/textWelcome"
        android:layout_width="match_parent"
        android:layout_marginBottom="10dp"
        android:text="@string/welcome_back"
        android:textSize="38sp"
        android:textStyle="bold"
        style="@style/MyText"
        app:layout_constraintBottom_toTopOf="@id/textSignIn"/>


</androidx.constraintlayout.widget.ConstraintLayout>