<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login_Register_Activity.RegisterActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/app_name"
        android:scaleType="centerCrop"
        android:src="@drawable/shop"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background_forget"/>

    <Button
        android:id="@+id/buttonRegister2"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:text="@string/Register"
        android:textAllCaps="false"
        style="@style/MyButton"
        app:layout_constraintBottom_toBottomOf="parent" />

    <CheckBox
        android:id="@+id/agree"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="20dp"
        android:textColor="@color/white"
        android:text="@string/agree"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/buttonRegister2"/>

    <EditText
        android:id="@+id/inputPassword2"
        android:layout_width="match_parent"
        android:background="@drawable/background_input"
        android:hint="@string/password"
        android:imeOptions="actionDone"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:textColorHint="@color/colorTextHint"
        style="@style/MyEdit"
        app:layout_constraintBottom_toTopOf="@+id/turePassword"/>

    <EditText
        android:id="@+id/turePassword"
        android:layout_width="match_parent"
        android:hint="@string/ture_password"
        android:imeOptions="actionDone"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:textColorHint="@color/colorTextHint"
        style="@style/MyEdit"
        app:layout_constraintBottom_toTopOf="@+id/agree"/>

    <EditText
        android:id="@+id/inputMobile2"
        android:layout_width="match_parent"
        android:hint="@string/mobile"
        android:imeOptions="actionDone"
        android:importantForAutofill="no"
        android:inputType="text"
        android:textColorHint="@color/colorTextHint"
        style="@style/MyEdit"
        app:layout_constraintBottom_toTopOf="@+id/inputPassword2"
        />

    <TextView
        android:id="@+id/textSignIn"
        android:layout_width="match_parent"
        android:layout_marginBottom="20dp"
        android:text="@string/register_to_your_accent"
        android:textSize="18sp"
        style="@style/MyText"
        app:layout_constraintBottom_toTopOf="@+id/inputMobile2"/>

    <TextView
        android:id="@+id/textBegin"
        android:layout_width="match_parent"
        android:layout_marginBottom="10dp"
        android:text="@string/textBegin"
        android:textSize="38sp"
        android:textStyle="bold"
        style="@style/MyText"
        app:layout_constraintBottom_toTopOf="@id/textSignIn"/>

</androidx.constraintlayout.widget.ConstraintLayout>