<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bgcolor"
    tools:context=".AddGoods.NewGoodsActivity">
    <TextView
        android:id="@+id/tv_produce"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textColor="@color/black"
        android:textSize="40sp"
        android:textStyle="bold"
        android:text="@string/load_up"
        tools:ignore="MissingConstraints" />

    <RelativeLayout
        android:id="@+id/re_1"
        android:layout_width="match_parent"
        android:layout_height="550dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_produce"
        >
        <EditText
            android:id="@+id/et_1"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/product_name"
            />
        <EditText
            android:id="@+id/et_2"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:hint="@string/product_describe"
            android:layout_below="@+id/et_1"
            />
        <EditText
            android:id="@+id/et_3"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/product_price"
            android:layout_below="@+id/et_2"
            />
        <TextView
            android:id="@+id/tv_picture"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/product_picture"
            android:textSize="19sp"
            android:layout_below="@+id/et_3"
            />
        <ImageView
            android:id="@+id/iv_product"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/baseline_add_circle_24"
            android:layout_below="@+id/tv_picture"/>
    </RelativeLayout>

    <Button
        android:id="@+id/up"
        android:layout_width="match_parent"
        style="@style/MyButton"
        android:layout_height="80dp"
        android:layout_marginTop="40dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:text="@string/up"
        android:textSize="36sp"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@+id/re_1"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>